[package]
name = "expression"
version = "0.3.4"
authors = ["Michael Neumann <mneumann@ntecs.de>"]

license = "MIT"
repository = "https://github.com/mneumann/expression-rs"
description = "Implements expression terms and conditions"
keywords = ["expression", "term"]
edition = "2018"

[dependencies]
asexp = "0.3.2"
